--- a/css/index.scss
+++ b/css/index.scss
@@ -20,6 +20,26 @@ body{
     background-image: url("../images/pattern-background-mobile.svg");
     background-repeat: no-repeat;
     background-color: $PaleBlue;
+
+    @media (min-width: 576px) {
+        background-image: url("../images/pattern-background-desktop.svg");
+
+        .flex {
+            height: 97vh;
+            align-items: center;
+
+            main {
+                width: 400px;
+
+                .alerta {
+                    p {
+                        width: 150px;
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .flex {
@@ -28,15 +48,24 @@ body{
     width: 100vw;
 
     main {
-        width: 345px;
+        width: 335px;
         text-align: center;
         overflow: hidden;
         border-radius: 15px;
         background-color: $VeryPaleBlue;
+        margin-top: 4.5em;
+        margin-bottom: 4.5em;
+        box-shadow: 0px 15px 25px -11px $DesaturateBlue;
+
+        .img {
+            width: 100%;
+            height: 160px;
+        }
 
         h2 {
             padding: 1.5em 0 1em 0;
             font-weight: 900;
+            color: $DarkBlue;
         }
 
         .parrafo {
@@ -58,13 +87,18 @@ body{
                 color: $DesaturateBlue;
 
                 span {
-                    color: black;
+                    color: $DarkBlue;
                     font-weight: 700;
                 }
             }
 
             a {
                 font-weight: 700;
+
+                &:hover {
+                    color: $BrightBlue;
+                    font-weight: 900;
+                }
             }
         }
 
@@ -75,17 +109,29 @@ body{
             border: none;
             border-radius: 10px;
             font-weight: 700;
+            cursor: pointer;
         }
 
         .btnPago {
             background-color: Blue;
             color: $VeryPaleBlue;
             box-shadow: 0px 20px 15px -6px rgba($color: $DesaturateBlue, $alpha: .5);
+
+            &:hover {
+                background-color: $BrightBlue;
+                transition: background-color ease .3s;
+                font-weight: 900;
+            }
         }
 
         .btnCancelar {
             background-color: rgba($color: $PaleBlue, $alpha: 0);
             color: $DesaturateBlue;
+
+            &:hover {
+                color: $DarkBlue;
+                font-weight: 900;
+            }
         }
     }
 }
